samples/_failures_safe/1761090238_a0f8a3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2d03e2ef.c: In function ‘hex_to_bytes’:
./samples/SAFE/__tmp_2d03e2ef.c:116:17: error: expected ‘)’ at end of input
  116 |         if (high
      |            ~    ^
      |                 )
./samples/SAFE/__tmp_2d03e2ef.c:116:9: error: expected declaration or statement at end of input
  116 |         if (high
      |         ^~
./samples/SAFE/__tmp_2d03e2ef.c:116:9: error: expected declaration or statement at end of input
